deploy/apps/go-app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: go-app
  namespace: go-app
spec:
  ports:
    - port: 3000
      targetPort: 3000
      protocol: TCP
      name: http
  selector:
    app: go-app
